crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__match__star_pattern_usage.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/match/star_pattern_usage.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..408,
        body: [
            Match(
                StmtMatch {
                    node_index: AtomicNodeIndex(..),
                    range: 57..407,
                    subject: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 63..70,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 76..97,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchStar(
                                PatternMatchStar {
                                    range: 81..83,
                                    node_index: AtomicNodeIndex(..),
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 93..97,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 102..128,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 107..114,
                                    node_index: AtomicNodeIndex(..),
                                    pattern: Some(
                                        MatchStar(
                                            PatternMatchStar {
                                                range: 107..109,
                                                node_index: AtomicNodeIndex(..),
                                                name: None,
                                            },
                                        ),
                                    ),
                                    name: Some(
                                        Identifier {
                                            id: Name("x"),
                                            range: 113..114,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 124..128,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 133..156,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchStar(
                                PatternMatchStar {
                                    range: 138..142,
                                    node_index: AtomicNodeIndex(..),
                                    name: Some(
                                        Identifier {
                                            id: Name("foo"),
                                            range: 139..142,
                                            node_index: AtomicNodeIndex(..),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 152..156,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 161..188,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchOr(
                                PatternMatchOr {
                                    range: 166..174,
                                    node_index: AtomicNodeIndex(..),
                                    patterns: [
                                        MatchStar(
                                            PatternMatchStar {
                                                range: 166..170,
                                                node_index: AtomicNodeIndex(..),
                                                name: Some(
                                                    Identifier {
                                                        id: Name("foo"),
                                                        range: 167..170,
                                                        node_index: AtomicNodeIndex(..),
                                                    },
                                                ),
                                            },
                                        ),
                                        MatchValue(
                                            PatternMatchValue {
                                                range: 173..174,
                                                node_index: AtomicNodeIndex(..),
                                                value: NumberLiteral(
                                                    ExprNumberLiteral {
                                                        node_index: AtomicNodeIndex(..),
                                                        range: 173..174,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 184..188,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 193..220,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchOr(
                                PatternMatchOr {
                                    range: 198..206,
                                    node_index: AtomicNodeIndex(..),
                                    patterns: [
                                        MatchValue(
                                            PatternMatchValue {
                                                range: 198..199,
                                                node_index: AtomicNodeIndex(..),
                                                value: NumberLiteral(
                                                    ExprNumberLiteral {
                                                        node_index: AtomicNodeIndex(..),
                                                        range: 198..199,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        MatchStar(
                                            PatternMatchStar {
                                                range: 202..206,
                                                node_index: AtomicNodeIndex(..),
                                                name: Some(
                                                    Identifier {
                                                        id: Name("foo"),
                                                        range: 203..206,
                                                        node_index: AtomicNodeIndex(..),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 216..220,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 225..251,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchClass(
                                PatternMatchClass {
                                    range: 230..237,
                                    node_index: AtomicNodeIndex(..),
                                    cls: Name(
                                        ExprName {
                                            node_index: AtomicNodeIndex(..),
                                            range: 230..233,
                                            id: Name("Foo"),
                                            ctx: Load,
                                        },
                                    ),
                                    arguments: PatternArguments {
                                        range: 233..237,
                                        node_index: AtomicNodeIndex(..),
                                        patterns: [
                                            MatchStar(
                                                PatternMatchStar {
                                                    range: 234..236,
                                                    node_index: AtomicNodeIndex(..),
                                                    name: None,
                                                },
                                            ),
                                        ],
                                        keywords: [],
                                    },
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 247..251,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 256..284,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchClass(
                                PatternMatchClass {
                                    range: 261..270,
                                    node_index: AtomicNodeIndex(..),
                                    cls: Name(
                                        ExprName {
                                            node_index: AtomicNodeIndex(..),
                                            range: 261..264,
                                            id: Name("Foo"),
                                            ctx: Load,
                                        },
                                    ),
                                    arguments: PatternArguments {
                                        range: 264..270,
                                        node_index: AtomicNodeIndex(..),
                                        patterns: [],
                                        keywords: [
                                            PatternKeyword {
                                                range: 265..269,
                                                node_index: AtomicNodeIndex(..),
                                                attr: Identifier {
                                                    id: Name("x"),
                                                    range: 265..266,
                                                    node_index: AtomicNodeIndex(..),
                                                },
                                                pattern: MatchStar(
                                                    PatternMatchStar {
                                                        range: 267..269,
                                                        node_index: AtomicNodeIndex(..),
                                                        name: None,
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 280..284,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 289..312,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchMapping(
                                PatternMatchMapping {
                                    range: 294..298,
                                    node_index: AtomicNodeIndex(..),
                                    keys: [
                                        Starred(
                                            ExprStarred {
                                                node_index: AtomicNodeIndex(..),
                                                range: 295..297,
                                                value: Name(
                                                    ExprName {
                                                        node_index: AtomicNodeIndex(..),
                                                        range: 296..297,
                                                        id: Name("_"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                    ],
                                    patterns: [
                                        MatchValue(
                                            PatternMatchValue {
                                                range: 297..297,
                                                node_index: AtomicNodeIndex(..),
                                                value: Name(
                                                    ExprName {
                                                        node_index: AtomicNodeIndex(..),
                                                        range: 297..297,
                                                        id: Name(""),
                                                        ctx: Invalid,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    rest: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 308..312,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 317..343,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchMapping(
                                PatternMatchMapping {
                                    range: 322..329,
                                    node_index: AtomicNodeIndex(..),
                                    keys: [
                                        Starred(
                                            ExprStarred {
                                                node_index: AtomicNodeIndex(..),
                                                range: 323..325,
                                                value: Name(
                                                    ExprName {
                                                        node_index: AtomicNodeIndex(..),
                                                        range: 324..325,
                                                        id: Name("_"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                    ],
                                    patterns: [
                                        MatchValue(
                                            PatternMatchValue {
                                                range: 327..328,
                                                node_index: AtomicNodeIndex(..),
                                                value: NumberLiteral(
                                                    ExprNumberLiteral {
                                                        node_index: AtomicNodeIndex(..),
                                                        range: 327..328,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    rest: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 339..343,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 348..377,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchMapping(
                                PatternMatchMapping {
                                    range: 353..363,
                                    node_index: AtomicNodeIndex(..),
                                    keys: [
                                        NoneLiteral(
                                            ExprNoneLiteral {
                                                node_index: AtomicNodeIndex(..),
                                                range: 354..358,
                                            },
                                        ),
                                    ],
                                    patterns: [
                                        MatchStar(
                                            PatternMatchStar {
                                                range: 360..362,
                                                node_index: AtomicNodeIndex(..),
                                                name: None,
                                            },
                                        ),
                                    ],
                                    rest: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 373..377,
                                    },
                                ),
                            ],
                        },
                        MatchCase {
                            range: 382..407,
                            node_index: AtomicNodeIndex(..),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 387..393,
                                    node_index: AtomicNodeIndex(..),
                                    value: BinOp(
                                        ExprBinOp {
                                            node_index: AtomicNodeIndex(..),
                                            range: 387..393,
                                            left: NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 387..388,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            op: Add,
                                            right: Starred(
                                                ExprStarred {
                                                    node_index: AtomicNodeIndex(..),
                                                    range: 391..393,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: AtomicNodeIndex(..),
                                                            range: 392..393,
                                                            id: Name("_"),
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    ctx: Store,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    StmtPass {
                                        node_index: AtomicNodeIndex(..),
                                        range: 403..407,
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Star pattern is only allowed inside a sequence pattern
2 | match subject:
3 |     case *_:
  |          ^^ Syntax Error: Star pattern cannot be used here
4 |         pass
5 |     case *_ as x:
  |


  |
3 |     case *_:
4 |         pass
5 |     case *_ as x:
  |          ^^ Syntax Error: Star pattern cannot be used here
6 |         pass
7 |     case *foo:
  |


  |
5 |     case *_ as x:
6 |         pass
7 |     case *foo:
  |          ^^^^ Syntax Error: Star pattern cannot be used here
8 |         pass
9 |     case *foo | 1:
  |


   |
 7 |     case *foo:
 8 |         pass
 9 |     case *foo | 1:
   |          ^^^^ Syntax Error: Star pattern cannot be used here
10 |         pass
11 |     case 1 | *foo:
   |


   |
 9 |     case *foo | 1:
10 |         pass
11 |     case 1 | *foo:
   |              ^^^^ Syntax Error: Star pattern cannot be used here
12 |         pass
13 |     case Foo(*_):
   |


   |
11 |     case 1 | *foo:
12 |         pass
13 |     case Foo(*_):
   |              ^^ Syntax Error: Star pattern cannot be used here
14 |         pass
15 |     case Foo(x=*_):
   |


   |
13 |     case Foo(*_):
14 |         pass
15 |     case Foo(x=*_):
   |                ^^ Syntax Error: Star pattern cannot be used here
16 |         pass
17 |     case {*_}:
   |


   |
15 |     case Foo(x=*_):
16 |         pass
17 |     case {*_}:
   |           ^^ Syntax Error: Star pattern cannot be used here
18 |         pass
19 |     case {*_: 1}:
   |


   |
15 |     case Foo(x=*_):
16 |         pass
17 |     case {*_}:
   |             ^ Syntax Error: Expected ':', found '}'
18 |         pass
19 |     case {*_: 1}:
   |


   |
17 |     case {*_}:
18 |         pass
19 |     case {*_: 1}:
   |           ^^ Syntax Error: Star pattern cannot be used here
20 |         pass
21 |     case {None: *_}:
   |


   |
19 |     case {*_: 1}:
20 |         pass
21 |     case {None: *_}:
   |                 ^^ Syntax Error: Star pattern cannot be used here
22 |         pass
23 |     case 1 + *_:
   |


   |
21 |     case {None: *_}:
22 |         pass
23 |     case 1 + *_:
   |              ^^ Syntax Error: Star pattern cannot be used here
24 |         pass
   |
